--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "html-react-parser": "^1.2.4",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
