--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
+    "query-string": "^7.0.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
