--- a/package.json
+++ b/package.json
@@ -27,13 +27,19 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "html-react-parser": "^1.2.4",
+    "i18next": "^20.2.1",
+    "i18next-browser-languagedetector": "^6.1.0",
+    "i18next-http-backend": "^1.2.1",
+    "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "query-string": "^7.0.0",
+    "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
+    "react-i18next": "^9.0.10",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scroll": "^1.8.2",
@@ -45,8 +51,10 @@
     "@babel/core": "^7.13.10",
     "@babel/node": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "customize-cra": "^1.0.0",
+    "eslint-plugin-react": "^7.21.2",
     "nodemon": "^2.0.7",
-    "eslint-plugin-react": "^7.21.2"
+    "react-app-rewired": "^2.1.8"
   },
   "engines": {
     "node": "12.4.0",
