--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ckeditor/ckeditor5-react": "^3.0.2",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "boostrap": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
@@ -37,6 +38,7 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "query-string": "^7.0.0",
+    "react-bootstrap": "^1.5.2",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
     "react-i18next": "^9.0.10",
