--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "ckeditor": "^4.12.1",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
