--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
   },
   "homepage": "https://github.com/basir/amazona#readme",
   "dependencies": {
+    "@ckeditor/ckeditor5-adapter-ckfinder": "^31.1.0",
     "@ckeditor/ckeditor5-build-classic": "^27.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^31.1.0",
+    "@ckeditor/ckeditor5-dev-utils": "^25.4.5",
     "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@ckeditor/ckeditor5-special-characters": "^31.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "^31.1.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "boostrap": "^2.0.0",
+    "ckeditor4-react": "^2.1.0",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
@@ -42,6 +49,7 @@
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
     "react-i18next": "^9.0.10",
+    "react-meta-tags": "^1.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scroll": "^1.8.2",
